--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,32 +1,21 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "lib": ["es6"],
     "module": "commonjs",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "allowJs": false,
+    "declaration": true,
     "removeComments": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,   
-    "skipLibCheck": true,                                
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/@types"
-    ],
-    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {
-      "@controllers/*": ["src/controllers/*"],
-      "@services/*": ["src/services/*"],
-      "@middlewares/*": ["src/middlewares/*"],
-      "@routes/*": ["src/routes/*"]
-    }
-  },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
+  }
 }
