--- a/app/app_monitoring/.gitignore
+++ b/app/app_monitoring/.gitignore
@@ -34,6 +34,7 @@ migrate_working_dir/
 /build/flutter_assets
 /build/kotlin
 /build/db2971b48c222aee74ec2233ef84c588
+/4d25a1cda3833f76c80232d3b1a3704b.cache.dill.track.dill
 
 
 # Symbolication related
